[workspace]
members = [
    "packages/core"
, "packages/macro_db_init", "packages/macro_node_iden", "packages/vjudge"]

[package]
name = "rmjac"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.40"
command_tool = { git = "https://github.com/rotriw/rust_command_tool_macro", version = "0.1.0" }
log = "0.4.27"
core = { path = "packages/core" }
fern = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
colored = "3.0.0"
chrono = "0.4.41"
actix = "0.13.5"
actix-web = "4.11.0"
derive_more = "2.0.1"
serde_json = "1.0.140"
sea-orm = "1.1.12"
lazy_static = "1.5.0"
shellexpand = "3.1.1"
captcha-rs = "0.2.11"
base16ct = "0.2.0"
sha2 = "0.10.9"
actix-cors = "0.7.1"
uuid = "1.17.0"
ua-parser = "0.2.1"
redis = "0.32.2"
tokio = "1.46.1"
tap = "1.0.1"
inquire = "0.7.5"
