[workspace]
members = [
    "packages/core"
, "packages/docs_parser", "packages/macro_db_init", "packages/macro_node_iden", "packages/macro_socket_auth"]

[package]
name = "rmjac"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.40"
command_tool = { git = "https://github.com/rotriw/rust_command_tool_macro", version = "0.1.0" }
log = "0.4.27"
core = { path = "packages/core" }
fern = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
colored = "3.0.0"
chrono = "0.4.41"
actix-web = "4.11.0"
derive_more = "2.0.1"
serde_json = "1.0.140"
sea-orm = "1.1.12"
lazy_static = "1.5.0"
shellexpand = "3.1.1"
captcha-rs = "0.2.11"
actix-cors = "0.7.1"
redis = "0.32.2"
tap = "1.0.1"
tower-http = "0.6.6"
